--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div>
+        <ul>
+            <li>this is one</li>
+            <li>this is two</li>
+        </ul>
+    </div>
     <h1>Here is the thing</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium reiciendis possimus eaque blanditiis? Voluptatem quia tenetur, officiis eveniet aspernatur debitis, repellat voluptatum reiciendis nulla blanditiis quidem. At nam labore illo.</p>
 </body>
